[package]
name = "pokey_logger"
rust-version = "1.58.0"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-only"
description = "A logging library to log different levels and colours"
readme = "README.md"
homepage = "https://github.com/PokeyOne/pokey-logger"
repository = "https://github.com/PokeyOne/pokey-logger"
keywords = ["log", "cli"]
categories = ["command-line-interface", "development-tools", "development-tools::debugging"]

[[example]]
name = "full_usage"
required-features = ["log_files", "time"]

[dependencies]
# Used for the global LOGGER instance.
lazy_static = "~1.4.0"

# Chrono dep used for displaying the time on log messages. Used in the 'time'
# feature, which is default.
chrono = { version = "~0.4.19", optional = true }

# Used for loading config files.
# TODO: Make serde part of a config feature.
serde = { version = "~1.0.135", features = ["derive"] }
serde_yaml = "~0.8.23"

[dev-dependencies]
tempfile = "~3.3.0"

[features]
default = ["time", "log_files"]

# Logging time with messages
time = ["chrono"]

# The output of logs to files.
log_files = ["chrono"]

