[package]
name = "pokey_logger"
rust-version = "1.58.0"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-only"
description = "A logging library to log different levels and colours"
readme = "README.md"
homepage = "https://github.com/PokeyOne/pokey-logger"
repository = "https://github.com/PokeyOne/pokey-logger"
keywords = ["log", "cli"]
categories = ["command-line-interface", "development-tools", "development-tools::debugging"]

[[example]]
name = "full_usage"
required-features = ["log_files"]

[dependencies]
# Used for the global LOGGER instance.
lazy_static = "~1.4.0"

# Chrono dep used for displaying the time on log messages. Used in the 'time'
# feature, which is default.
chrono = { version = "~0.4.19", optional = true }

# Used for loading config files.
serde = { version = "~1.0.135", features = ["derive"], optional = true }
serde_yaml = { version = "~0.8.23", optional = true }

[dev-dependencies]
tempfile = "~3.3.0"

[features]
default = ["time", "log_files", "env"]

# Logging time with messages
time = ["chrono"]

# The output of logs to files.
log_files = ["chrono"]

# Load settings from a config file. Not included by default. Not included by
# default because at the time of adding this feature, on macOS intel chip, two
# thirds of the final .rlib file was just from this feature alone.
config = ["serde", "serde_yaml"]

# Configure the application through environment variables.
env = []

